// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> render should render properly 1`] = `
<div
  className="cardWrapper"
>
  <img
    alt="imagem"
    className="cardBody"
    onClick={[Function]}
  />
  <div
    className="cardFooter"
  >
    <button
      className="btn"
      onClick={[Function]}
    >
      Adicionar
    </button>
  </div>
</div>
`;

exports[`<Card /> render should render properly added 1`] = `
<div
  className="cardFooter"
>
  <button
    className="btn added"
    onClick={[Function]}
  >
    Remover
  </button>
</div>
`;

exports[`<Card /> render should render properly opened 1`] = `
<div
  className="cardWrapper"
>
  <img
    alt="imagem"
    className="cardBody"
    onClick={[Function]}
  />
  <CardDetails
    card={
      Object {
        "artist": "murtinha",
        "flavor": "Card flavor",
        "id": 1,
        "image": "path/imagem.png",
        "manaCost": "0",
        "name": "Black Lotus",
        "rarity": "Rare",
        "setName": "Magic collection",
        "text": "Card text",
        "type": "Artifact",
      }
    }
    onClose={[Function]}
  />
  <div
    className="cardFooter"
  >
    <button
      className="btn"
      onClick={[Function]}
    >
      Adicionar
    </button>
  </div>
</div>
`;
